// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkCalendar should render correctly 1`] = `
<View
  locale="en_GB"
  selectedDates={Array []}
  selectionType="single"
  style={
    Array [
      Object {
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RCTCalendarView
    locale="en_GB"
    maxDate={null}
    minDate={null}
    onDateSelection={[Function]}
    selectedDates={Array []}
    selectionType="single"
  />
</View>
`;

exports[`iOS BpkCalendar should render correctly for selectionType={'multiple'} 1`] = `
<View
  locale="en_GB"
  selectedDates={Array []}
  selectionType="multiple"
  style={
    Array [
      Object {
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RCTCalendarView
    locale="en_GB"
    maxDate={null}
    minDate={null}
    onDateSelection={[Function]}
    selectedDates={Array []}
    selectionType="multiple"
  />
</View>
`;

exports[`iOS BpkCalendar should render correctly for selectionType={'range'} 1`] = `
<View
  locale="en_GB"
  selectedDates={Array []}
  selectionType="range"
  style={
    Array [
      Object {
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RCTCalendarView
    locale="en_GB"
    maxDate={null}
    minDate={null}
    onDateSelection={[Function]}
    selectedDates={Array []}
    selectionType="range"
  />
</View>
`;

exports[`iOS BpkCalendar should render correctly for selectionType={'single'} 1`] = `
<View
  locale="en_GB"
  selectedDates={Array []}
  selectionType="single"
  style={
    Array [
      Object {
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RCTCalendarView
    locale="en_GB"
    maxDate={null}
    minDate={null}
    onDateSelection={[Function]}
    selectedDates={Array []}
    selectionType="single"
  />
</View>
`;

exports[`iOS BpkCalendar should render correctly with arbitrary props 1`] = `
<View
  locale="en_GB"
  selectedDates={Array []}
  selectionType="single"
  style={
    Array [
      Object {
        "height": "100%",
        "width": "100%",
      },
    ]
  }
  testID="123"
>
  <RCTCalendarView
    locale="en_GB"
    maxDate={null}
    minDate={null}
    onDateSelection={[Function]}
    selectedDates={Array []}
    selectionType="single"
    testID="123"
  />
</View>
`;

exports[`iOS BpkCalendar should render correctly with both minDate and maxDate 1`] = `
<View
  locale="en_GB"
  selectedDates={Array []}
  selectionType="single"
  style={
    Array [
      Object {
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RCTCalendarView
    locale="en_GB"
    maxDate={2020-05-18T23:00:00.000Z}
    minDate={2019-05-18T23:00:00.000Z}
    onDateSelection={[Function]}
    selectedDates={Array []}
    selectionType="single"
  />
</View>
`;

exports[`iOS BpkCalendar should render correctly with custom style 1`] = `
<View
  locale="en_GB"
  selectedDates={Array []}
  selectionType="single"
  style={
    Array [
      Object {
        "height": "100%",
        "width": "100%",
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RCTCalendarView
    locale="en_GB"
    maxDate={null}
    minDate={null}
    onDateSelection={[Function]}
    selectedDates={Array []}
    selectionType="single"
  />
</View>
`;

exports[`iOS BpkCalendar should render correctly with maxDate 1`] = `
<View
  locale="en_GB"
  selectedDates={Array []}
  selectionType="single"
  style={
    Array [
      Object {
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RCTCalendarView
    locale="en_GB"
    maxDate={2020-05-18T23:00:00.000Z}
    minDate={null}
    onDateSelection={[Function]}
    selectedDates={Array []}
    selectionType="single"
  />
</View>
`;

exports[`iOS BpkCalendar should render correctly with minDate 1`] = `
<View
  locale="en_GB"
  selectedDates={Array []}
  selectionType="single"
  style={
    Array [
      Object {
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RCTCalendarView
    locale="en_GB"
    maxDate={null}
    minDate={2019-05-18T23:00:00.000Z}
    onDateSelection={[Function]}
    selectedDates={Array []}
    selectionType="single"
  />
</View>
`;

exports[`iOS BpkCalendar should render correctly with selection type "multiple" and selected dates 1`] = `
<View
  locale="en_GB"
  selectedDates={
    Array [
      2019-05-18T23:00:00.000Z,
      2019-05-20T23:00:00.000Z,
      2019-05-28T23:00:00.000Z,
    ]
  }
  selectionType="multiple"
  style={
    Array [
      Object {
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RCTCalendarView
    locale="en_GB"
    maxDate={null}
    minDate={null}
    onDateSelection={[Function]}
    selectedDates={
      Array [
        2019-05-18T23:00:00.000Z,
        2019-05-20T23:00:00.000Z,
        2019-05-28T23:00:00.000Z,
      ]
    }
    selectionType="multiple"
  />
</View>
`;

exports[`iOS BpkCalendar should render correctly with selection type "range" and selected dates 1`] = `
<View
  locale="en_GB"
  selectedDates={
    Array [
      2019-05-18T23:00:00.000Z,
      2019-05-20T23:00:00.000Z,
    ]
  }
  selectionType="single"
  style={
    Array [
      Object {
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RCTCalendarView
    locale="en_GB"
    maxDate={null}
    minDate={null}
    onDateSelection={[Function]}
    selectedDates={
      Array [
        2019-05-18T23:00:00.000Z,
        2019-05-20T23:00:00.000Z,
      ]
    }
    selectionType="single"
  />
</View>
`;

exports[`iOS BpkCalendar should render correctly with selection type "single" and selected dates 1`] = `
<View
  locale="en_GB"
  selectedDates={
    Array [
      2019-05-18T23:00:00.000Z,
    ]
  }
  selectionType="single"
  style={
    Array [
      Object {
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RCTCalendarView
    locale="en_GB"
    maxDate={null}
    minDate={null}
    onDateSelection={[Function]}
    selectedDates={
      Array [
        2019-05-18T23:00:00.000Z,
      ]
    }
    selectionType="single"
  />
</View>
`;
